Add dynamic builder implementation, add some tools.