@@ -1,35 +1,34 @@
 package hu.qgears.tools;
 
 import java.io.File;
-import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.TreeMap;
 import java.util.TreeSet;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
+import hu.qgears.commons.UtilComma;
 import hu.qgears.commons.UtilFile;
 import hu.qgears.commons.UtilString;
 import hu.qgears.rtemplate.runtime.Consumer;
-import hu.qgears.rtemplate.runtime.DeferredTemplate;
 import hu.qgears.rtemplate.runtime.RQuickTemplate;
 import hu.qgears.tools.UtilProcess2.ProcessFuture;
 import hu.qgears.tools.UtilProcess2.ProcessResult;
 import joptsimple.annot.JOHelp;
+import joptsimple.annot.JOSimpleBoolean;
+import joptsimple.annot.JOSkip;
 import joptsimple.tool.AbstractTool;
 
 public class GitBackupUpdate extends AbstractTool
 {
-	private final String urslAcceptedCharacters="";
+	private Calendar c;
 	private TemplateDelegate t=new TemplateDelegate();
 	public class Args implements IArgs{
 		@JOHelp("Repository backup folder - subfolders are repository backups. All are fetched and then all tags and branches are tagged (except the tags that are already local backups) so that they are not overwritten with next fetches.")
@@ -38,12 +37,31 @@ public class GitBackupUpdate extends AbstractTool
 		public long timeoutMillis=60000*30;
 		@JOHelp("Commit latest backup date to this file. The file must be in a git repo branch which is only written by this client (commit and push only this single file). (When not present log is not saved.)")
 		public File backupLogFile;
-		@JOHelp("Pointer to file of URLs to be backed up. Paramter of the 'git show' command. Containing repo must be within the backed up repositories within the repos folder. Must be $repofolder$:$branch$:$path$ Example: 'repo.gi:master:backupConfig.txt'. If this argument is present then the specified branch is fetched from origin first then the config is parsed.")
+		@JOHelp("Pointer to file of URLs to be backed up. Paramter of the 'git show' command. Containing repo must be within the backed up repositories within the repos folder. Must be $repofolder$:$branch$:$path$ Example: 'master:backupConfig.txt'. If this argument is present then the specified branch is fetched from origin first then the config is parsed.")
 		public String backupConfig;
 		@JOHelp("Reference name to be used for backups. Backup refs are generated like: /refs/$backupRef$/date/original")
 		public String backupRef="backup";
 		@JOHelp("refs to be backed up. Default: heads, tags means: git fetch -p origin +refs/heads/*:refs/heads/* +refs/tags/*:refs/tags/*")
 		public List<String> refs=createDefaultRefsList();
+		@JOHelp("Debug feature: only list the folders then print status and exit!")
+		@JOSimpleBoolean
+		public boolean debugExitAfterListExistingFolders=false;
+		@JOHelp("Debug feature: exit after cloning new repo folders")
+		@JOSimpleBoolean
+		public boolean debugExitAfterClone=false;
+		@JOHelp("Debug feature: exit without updating the log file")
+		@JOSimpleBoolean
+		public boolean debugExitBeforeBackupLog=false;
+		@JOHelp("Debug feature: exit after first updated backup folder")
+		@JOSimpleBoolean
+		public boolean debugExitAfterFirstUpdated=false;
+		@JOHelp("Debug feature: do not create backup refs but only log the commands would be executed.")
+		@JOSimpleBoolean
+		public boolean debugNoChangeRefs=false;
+		@JOSkip
+		public String from="from/";
+		@JOSkip
+		public String until="until/";
 		public void validate() {
 			if(repos==null||!repos.isDirectory()||!repos.exists())
 			{
@@ -83,12 +101,17 @@ public class GitBackupUpdate extends AbstractTool
 			return ret;
 		}
 	}
-	private TimeUnit timeoutUnit=TimeUnit.MILLISECONDS;
+	public final static TimeUnit timeoutUnit=TimeUnit.MILLISECONDS;
 
 	private SimpleDateFormat df=new SimpleDateFormat("yyyy.MM.dd.HH-mm-ss");
 	private Args a;
 	private boolean error;
-	private String currentUrl;
+	private Set<String> reqUrls=null;
+	private Set<String> updatedUrls=new TreeSet<>();
+	/**
+	 * Maps URL to folder absolute path name.
+	 */
+	private Map<String, String> urls=new HashMap<>();
 
 	@Override
 	public String getId() {
@@ -109,233 +132,57 @@ public class GitBackupUpdate extends AbstractTool
 	protected IArgs createArgsObject() {
 		return new Args();
 	}
+
 	@Override
 	public int doExec(IArgs args) throws Exception {
-		Calendar c=Calendar.getInstance();
+		c=Calendar.getInstance();
 		a=(Args) args;
-		Set<String> reqUrls=null;
-		if(a.backupConfig!=null)
-		{
-			write("== Update backupConfig file\n\n....\n");
-			try
-			{
-				write("Config: ");
-				writeObject(a.backupConfig);
-				write("\n");
-				List<String> pieces=UtilString.split(a.backupConfig, ":");
-				String folder=pieces.get(0);
-				File f=new File(a.repos, folder);
-				String branch=pieces.get(1);
-				String path=pieces.get(2);
-				// String cmd="git fetch origin +refs/heads/"+branch+":refs/heads/"+branch;
-				ProcessBuilder pb=new ProcessBuilder("git", "fetch", "origin", "+refs/heads/"+branch+":refs/heads/"+branch).directory(f);
-				Process p = pb.start();
-				ProcessFuture pr=UtilProcess2.execute(p);
-				ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-				addLog(" $ "+cmdLog(pb));
-				if(r.getExitCode()!=0)
-				{
-					addExitCode("Update repo containing config: ", r);
-					addLog(r.getStdoutString());
-					addError(r.getStderrString());
-				}
-				pb=new ProcessBuilder("git", "show", ""+branch+":"+path).directory(f);
-//				cmd="git show "+branch+":"+path;
-				write(" $ ");
-				writeObject(cmdLog(pb));
-				write("\n");
-				p=pb.start();
-				pr=UtilProcess2.execute(p);
-				r=pr.get(a.timeoutMillis, timeoutUnit);
-				if(r.getExitCode()!=0)
-				{
-					addExitCode("Read configuration from repo: ", r);
-					addLog(""+cmdLog(pb));
-					addLog(r.getStdoutString());
-					addError(r.getStderrString());
-				}
-				reqUrls=new TreeSet<>();
-				// Remote configuration. This is an attack vector of the program if we consider blackhat activity on the git servers.
-				for(String s: UtilString.split(r.getStdoutString(), "\r\n"))
-				{
-					String trimmed=s.trim();
-					if(trimmed.length()>0 && !trimmed.startsWith("#"))
-					{
-						if(validateURL(trimmed))
-						{
-							reqUrls.add(trimmed);
-						}
-					}
-				}
-			}finally
-			{
-				write("....\n");
-			}
-		}
-		Set<String> updatedUrls=new TreeSet<>();
+		readBackupConfig();
 		try {
-			Map<String, String> urls=new HashMap<>();
-			for(File f:UtilFile.listFiles(a.repos))
+			listExistingBackups();
+			if(a.debugExitAfterListExistingFolders)
 			{
-				try {
-					if(!f.getName().startsWith(".") && f.isDirectory())
-					{
-						{
-							ProcessBuilder pb=new ProcessBuilder("git", "remote", "get-url", "origin").directory(f);
-							Process p=pb.start();
-							ProcessFuture pr=UtilProcess2.execute(p);
-							String url=pr.get(a.timeoutMillis, timeoutUnit).getStdoutString();
-							urls.put(UtilString.split(url, "\r\n").get(0), f.getAbsolutePath());
-						}
-					}
-				}catch(Exception e)
-				{
-					addError(e);
-				}
+				return debugExitAfterListExistingFolders();
 			}
-			if(reqUrls!=null)
+			executeClones();
+			if(a.debugExitAfterClone)
 			{
-				for(String s: reqUrls)
-				{
-					if(!urls.containsKey(s))
-					{
-						write("== Clone: ");
-						writeObject(s);
-						write("\n\n....\n");
-						try
-						{
-							ProcessBuilder pb=new ProcessBuilder("git", "clone", "--bare", ""+s).directory(a.repos);
-							Process p=pb.start();
-							addLog(" $ "+cmdLog(pb));
-							ProcessFuture pf=UtilProcess2.execute(p);
-							ProcessResult pr=pf.get(a.timeoutMillis, timeoutUnit);
-							addExitCode("clone url "+s+": ", pr);
-							if(pr.getExitCode()!=0)
-							{
-								addLog(pr.getStdoutString());
-								addError(pr.getStderrString());
-							}
-						}finally
-						{
-							write("....\n");
-						}
-					}
-				}
+				write("debugExitAfterClone\n");
+				return 0;
 			}
-			for(File f:UtilFile.listFiles(a.repos))
-			{
-				try {
-					if(!f.getName().startsWith(".") && f.isDirectory())
-					{
-						currentUrl=null;
-						boolean errorState=error;
-						error=false;
-						write("\n== ");
-						DeferredTemplate errTempl=t.deferredDelegate(new WriteError());//NB
-						write(": ");
-						writeObject(f.getName());
-						DeferredTemplate fromTempl=t.deferredDelegate(new WriteFrom());//NB
-						write("\n\n....\n");
-						try
-						{
-							{
-								ProcessBuilder pb=new ProcessBuilder("git", "remote" ,"get-url", "origin").directory(f);
-								Process p=pb.start();
-								ProcessFuture pr=UtilProcess2.execute(p);
-								currentUrl=UtilString.split(pr.get(a.timeoutMillis, timeoutUnit).getStdoutString(), "\r\n").get(0);
-								updatedUrls.add(currentUrl);
-								fromTempl.generate();
-							}
-							{
-								List<String> command=new ArrayList<>();
-								command.add("git");
-								command.add("fetch");
-								command.add("-p");
-								command.add("origin");
-								for(String r: a.refs)
-								{
-									command.add("+refs/"+r+"/*:refs/"+r+"/*");
-								}
-								ProcessBuilder pb=new ProcessBuilder(command).directory(f);
-								addLog(cmdLog(pb));
-								Process p=pb.start();
-								ProcessFuture pr=UtilProcess2.execute(p);
-								ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-								addLog(r.getStdoutString());
-								addError(r.getStderrString());
-								addExitCode("Fetch exit code: ", r);
-							}
-							Map<String, String> refs=new TreeMap<>();
-							{
-								ProcessBuilder pb=new ProcessBuilder("git", "show-ref", "origin").directory(f);
-								Process p=pb.start();
-								ProcessFuture pr=UtilProcess2.execute(p);
-								ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-								String refss=r.getStdoutString();
-								addExitCode("Get refs: ", r);
-								addError(r.getStderrString());
-								List<String> lines=UtilString.split(refss, "\r\n");
-								for(String line: lines)
-								{
-									int idx=line.indexOf(' ');
-									String code=line.substring(0, idx);
-									String url=line.substring(idx+1);
-									refs.put(url, code);
-								}
-							}
-							String backupRefPrefix="refs/"+a.backupRef+"/";
-							for(String ref:refs.keySet())
-							{
-								if(!ref.startsWith(backupRefPrefix))
-								{
-									String code=refs.get(ref);
-									createBackup(f, code, backupRefPrefix+df.format(c.getTime())+"/"+ref);
-									getCommitLogMessage(f, code);
-								}
-							}
-						}finally
-						{
-							write("....\n");
-							errTempl.generate();
-							error=error|errorState;
-							write("\n\n");
-						}
-					}
-				} catch (Exception e) {
-					addError(e);
-				}
-			}
+			updateAllBackupFolders();
 		} catch (Exception e) {
 			addError(e);
 		}
-		if(reqUrls!=null)
+		printAllUpdated();
+		if(a.debugExitAfterFirstUpdated)
 		{
-			for(String s: updatedUrls)
-			{
-				if(!reqUrls.contains(s))
-				{
-					write("\n== Unnecessary backup: '");
-					writeObject(s);
-					write("'\n\n"+reqUrls);
-				}
-			}
+			write("debugExitAfterFirstUpdated\n");
+			return 0;
 		}
+		printUnnecessaryBackups();
+		printDiskUsage();
+		if(a.debugExitBeforeBackupLog)
 		{
-			write("== Disk usage\n\n");
-			ProcessBuilder pb=new ProcessBuilder("du", "-sh" ,".").directory(a.repos);
-			Process p=pb.start();
-			ProcessFuture pr=UtilProcess2.execute(p);
-			ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-			if(r.getExitCode()!=0)
-			{
-				addExitCode("Get bytes used: ", r);
-				addLog(r.getStdoutString());
-				addError(r.getStderrString());
-			}else
-			{
-				addLog("Backup folder uses bytes on disk: "+r.getStdoutString());
-			}
+			write("debugExitBeforeBackupLog\n");
+			return 0;
 		}
+		commitBackupLogFile();
+		return error?1:0;
+	}
+	
+	private void printAllUpdated() {
+		write("= All updated\n\n");
+		UtilComma comma=new UtilComma(", ");
+		for(String s: updatedUrls)
+		{
+			writeObject(comma.getSeparator());
+			writeObject(s);
+		}
+		write("\n\n");
+	}
+
+	private void commitBackupLogFile() throws Exception {
 		if(a.backupLogFile!=null)
 		{
 			String log=t.getResult();
@@ -349,7 +196,8 @@ public class GitBackupUpdate extends AbstractTool
 			a.backupLogFile.getParentFile().mkdirs();
 			UtilFile.saveAsFile(a.backupLogFile, t.getResult());
 			{
-				Process p=new ProcessBuilder("git", "add", ".").directory(a.backupLogFile.getParentFile()).start();
+				String[] cmdarray=new String[]{"git", "add", "."};
+				Process p=Runtime.getRuntime().exec(cmdarray, null, a.backupLogFile.getParentFile());
 				ProcessFuture pr=UtilProcess2.execute(p);
 				ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
 				addExitCode("Log git add results: ", r);
@@ -357,7 +205,8 @@ public class GitBackupUpdate extends AbstractTool
 				addError(r.getStderrString());
 			}
 			{
-				Process p=new ProcessBuilder("git", "commit", "-m", "Autobackup: "+df.format(c.getTime())).directory(a.backupLogFile.getParentFile()).start();
+				String[] cmdarray=new String[]{"git", "commit", "-m", "Autobackup: "+df.format(c.getTime())};
+				Process p=Runtime.getRuntime().exec(cmdarray, null, a.backupLogFile.getParentFile());
 				ProcessFuture pr=UtilProcess2.execute(p);
 				ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
 				addExitCode("Commit log results: ", r);
@@ -365,7 +214,7 @@ public class GitBackupUpdate extends AbstractTool
 				addError(r.getStderrString());
 			}
 			{
-				Process p=new ProcessBuilder("git", "push").directory(a.backupLogFile.getParentFile()).start();
+				Process p=Runtime.getRuntime().exec("git push", null, a.backupLogFile.getParentFile());
 				ProcessFuture pr=UtilProcess2.execute(p);
 				ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
 				addExitCode("Push log results: ", r);
@@ -373,28 +222,210 @@ public class GitBackupUpdate extends AbstractTool
 				addError(r.getStderrString());
 			}
 		}
-		return error?1:0;
-	}
-	
-	private boolean validateURL(String repoUrl) {
-		for(char ch: repoUrl.toCharArray())
-		{
-			if(urslAcceptedCharacters.indexOf(ch)<0)
-			{
-				write("ERROR Invalid character in required URL: '");
-				writeObject(""+ch);
-				write("' in: '");
-				writeObject(""+repoUrl);
-				write("'\n");
-				error=true;
-				return false;
-			}
-		}
-		return true;
 	}
 
-	private String cmdLog(ProcessBuilder pb) {
-		return UtilString.concat(pb.command(), " ");
+	private void printDiskUsage() throws Exception {
+		write("== Disk usage\n\n");
+		Process p=Runtime.getRuntime().exec("du -sh .", null, a.repos);
+		ProcessFuture pr=UtilProcess2.execute(p);
+		ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
+		if(r.getExitCode()!=0)
+		{
+			addExitCode("Get bytes used: ", r);
+			addLog(r.getStdoutString());
+			addError(r.getStderrString());
+		}else
+		{
+			addLog("Backup folder uses bytes on disk: "+r.getStdoutString());
+		}
+		p=Runtime.getRuntime().exec("df -h .", null, a.repos);
+		pr=UtilProcess2.execute(p);
+		r=pr.get(a.timeoutMillis, timeoutUnit);
+		if(r.getExitCode()!=0)
+		{
+			addExitCode("Get available space: ", r);
+			addLog(r.getStdoutString());
+			addError(r.getStderrString());
+		}else
+		{
+			addLog("Backup folder available space on disk: "+r.getStdoutString());
+		}
+	}
+
+	private void printUnnecessaryBackups() {
+		if(reqUrls!=null)
+		{
+			Set<String> unnecessary=new TreeSet<>();
+			for(String s: updatedUrls)
+			{
+				if(!reqUrls.contains(s))
+				{
+					unnecessary.add(s);
+				}
+			}
+			if(unnecessary.size()>0)
+			{
+				write("\n== Unnecessary backup: '");
+				writeObject(unnecessary);
+				write("'\n\n");
+			}
+		}
+	}
+
+	private void updateAllBackupFolders() {
+		for(File f:UtilFile.listFiles(a.repos))
+		{
+			try {
+				if(!f.getName().startsWith(".") && f.isDirectory())
+				{
+					BackupSingleGitRepo b=new BackupSingleGitRepo(f, a, c);
+					b.backup();
+					if(b.hasChange() || b.hasError())
+					{
+						t.writeDelegate(b.getOutput());
+					}
+					updatedUrls.add(b.getCurrentUrl());
+					error|=b.hasError();
+				}
+			} catch (Exception e) {
+				addError(e);
+			}
+			if(a.debugExitAfterFirstUpdated)
+			{
+				return;
+			}
+		}
+	}
+
+	private void executeClones() throws Exception {
+		if(reqUrls!=null)
+		{
+			for(String s: reqUrls)
+			{
+				if(!urls.containsKey(s))
+				{
+					write("== Clone: ");
+					writeObject(s);
+					write("\n\n....\n");
+					try
+					{
+						List<String> cmd=Arrays.asList("git", "clone", "--bare", s);
+						Process p=new ProcessBuilder(cmd).directory(a.repos).start();
+						addLog(" $ "+UtilString.concat(cmd, " "));
+						ProcessFuture pf=UtilProcess2.execute(p);
+						ProcessResult pr=pf.get(a.timeoutMillis, timeoutUnit);
+						addExitCode("clone url "+s+": ", pr);
+						if(pr.getExitCode()!=0)
+						{
+							addLog(pr.getStdoutString());
+							addError(pr.getStderrString());
+						}
+					}finally
+					{
+						write("....\n");
+					}
+				}
+			}
+		}
+	}
+
+	private int debugExitAfterListExistingFolders() {
+		for(String key: urls.keySet())
+		{
+			System.out.println(key+" -> "+urls.get(key));
+		}
+		for(String s: reqUrls)
+		{
+			if(!urls.containsKey(s))
+			{
+				System.out.println("REQ CLONE: "+s);
+			}
+		}
+		return 0;
+	}
+
+	/**
+	 * List all sub-folders in the backup folder
+	 * and check which folders back up which git reference.
+	 * Fills the urls field.
+	 */
+	private void listExistingBackups() {
+		for(File f:UtilFile.listFiles(a.repos))
+		{
+			try {
+				if(!f.getName().startsWith(".") && f.isDirectory())
+				{
+					{
+						List<String> cmd=Arrays.asList("git", "remote", "get-url", "origin");
+						Process p=new ProcessBuilder(cmd).directory(f).start();
+						ProcessFuture pr=UtilProcess2.execute(p);
+						String url=pr.get(a.timeoutMillis, timeoutUnit).getStdoutString();
+						urls.put(UtilString.split(url, "\r\n").get(0), f.getAbsolutePath());
+					}
+				}
+			}catch(Exception e)
+			{
+				addError(e);
+			}
+		}
+	}
+	/**
+	 * Update from git and load the backup configuration file.
+	 * @throws Exception
+	 */
+	private void readBackupConfig() throws Exception {
+		if(a.backupConfig!=null)
+		{
+			write("== Update backupConfig file\n\n....\n");
+			try
+			{
+				write("Config: ");
+				writeObject(a.backupConfig);
+				write("\n");
+				List<String> pieces=UtilString.split(a.backupConfig, ":");
+				String folder=pieces.get(0);
+				File f=new File(a.repos, folder);
+				String branch=pieces.get(1);
+				String path=pieces.get(2);
+				List<String> cmd=Arrays.asList("git", "fetch", "origin", "+refs/heads/"+branch+":refs/heads/"+branch);
+				Process p=new ProcessBuilder(cmd).directory(f).start();
+				ProcessFuture pr=UtilProcess2.execute(p);
+				ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
+				addLog(" $ "+UtilString.concat(cmd, " "));
+				if(r.getExitCode()!=0)
+				{
+					addExitCode("Update repo containing config: ", r);
+					addLog(r.getStdoutString());
+					addError(r.getStderrString());
+				}
+				cmd=Arrays.asList("git", "show", branch+":"+path);
+				write(" $ ");
+				writeObject(UtilString.concat(cmd, " "));
+				write("\n");
+				p=new ProcessBuilder(cmd).directory(f).start();
+				pr=UtilProcess2.execute(p);
+				r=pr.get(a.timeoutMillis, timeoutUnit);
+				if(r.getExitCode()!=0)
+				{
+					addExitCode("Read configuration from repo: ", r);
+					addLog(""+cmd);
+					addLog(r.getStdoutString());
+					addError(r.getStderrString());
+				}
+				reqUrls=new TreeSet<>();
+				for(String s: UtilString.split(r.getStdoutString(), "\r\n"))
+				{
+					String trimmed=s.trim();
+					if(trimmed.length()>0 && !trimmed.startsWith("#"))
+					{
+						reqUrls.add(trimmed);
+					}
+				}
+			}finally
+			{
+				write("....\n");
+			}
+		}
 	}
 
 	class WriteError implements Consumer<Object[]>
@@ -405,15 +436,6 @@ public class GitBackupUpdate extends AbstractTool
 		}
 	}
 	
-	class WriteFrom implements Consumer<Object[]>
-	{
-		@Override
-		public void accept(Object[] param) {
-			write(" from: ");
-			writeObject(currentUrl);
-		}
-	}
-
 	private void addError(Exception e) {
 		error=true;
 		e.printStackTrace();
@@ -432,40 +454,6 @@ public class GitBackupUpdate extends AbstractTool
 			error=true;
 		}
 		addLog(string+code+(code!=0?" ERROR":""));
-	}
-
-	private void createBackup(File f, String src, String target) throws Exception {
-		ProcessBuilder pb=new ProcessBuilder("git", "update-ref", target, src).directory(f);
-		addLog(" $ "+cmdLog(pb));
-		Process p=pb.start();
-		ProcessFuture pr=UtilProcess2.execute(p);
-		ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-		int ec=r.getExitCode();
-		//		addLog(r.getStdoutString());
-		//		addError(r.getStderrString());
-		if(ec!=0)
-		{
-			error=true;
-			addError("Create tag error: '"+cmdLog(pb)+"' "+ec);
-		}
-	}
-	private void getCommitLogMessage(File f, String code) throws IOException, InterruptedException, ExecutionException, TimeoutException {
-		ProcessBuilder pb=new ProcessBuilder("git", "log", "--format=%B", "-n", "1", code).directory(f);
-		Process p=pb.start();
-		ProcessFuture pr=UtilProcess2.execute(p);
-		ProcessResult r=pr.get(a.timeoutMillis, timeoutUnit);
-		int ec=r.getExitCode();
-		String comment=r.getStdoutString();
-		if(comment.length()>1024)
-		{
-			comment=comment.substring(0, 1024)+"...";
-		}
-		addLog(comment);
-		if(ec!=0)
-		{
-			error=true;
-			addError("Get commit log message error: '"+cmdLog(pb)+"' "+ec);
-		}
 	}
 
 	private void addError(String string) {
